refactor slow receive logging into separate method
add tests to verify different logging behavior